--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,6 @@
-@import '~antd/dist/antd.css';
+@import '../../node_modules/antd/dist/antd.css';
+
+
 .ant-list-item-meta-title {
     font-size: 32px;
     color: black;
